Changes from Version 0.15-17 to 0.15-18 [XXX]

* Added options to smooth residuals for stopping rule in crsiv
  (i.e. smooth y-phi(z)~w as opposed to separately smoothing y~w and
  phi(z)~w)

* Added options to input starting values for crsiv and crsivderiv

* Stopping rules for crsiv and crsivderiv modified	

Changes from Version 0.15-16 to 0.15-17 [04-Jun-2012]

* Updated NOMAD from 3.5.0 (released Jan 2011) to 3.5.1 (released Mar
  2012)

Changes from Version 0.15-15 to 0.15-16 [30-Apr-2012]

* Fixed bug when deriv= is used in crs() (derivatives for categorical
  variables were not correct in some cases - derivatives computed by
  plot and plot-data were correct however)

* Fixed issue when plot called with "plot-data" or "data" and
  par(mfrow()) is not reset

* Startup message points to the faq, faq is now a vignette

* Glitch fixed in npglpreg() where kernel types were not being passed
  to the NOMAD solver...

* Added ckerorder option to npglpreg()

* More information output by summary for npglpreg() objects (kernel
  type, order etc.)

* tol for determining ill-conditioned bases now consistent with
  Octave/Matlab etc. and uses the tolerance
  max(dim(x))*max(sqrt(abs(e)))*.Machine$double.eps

Changes from Version 0.15-14 to 0.15-15 [16-Apr-2012]

* NOTE: ** major change in default setting ** Default basis set to
  "auto" from "additive" for more robust results when using default
  settings with more than one continuous predictor (at the cost of
  additional computation for all supported bases, more memory
  required). Warnings changed to reflect this, additional warnings
  provided, but mainly when cv="none" (i.e. user is doing things
  manually and failing to provide defaults)

* Added switch for discarding singular bases during cross-validation
  (singular.ok=FALSE is default, so default is to discard singular
  bases)

* More stringent checking for ill-conditioned bases during
  cross-validation - previous checks were insufficient allowing poorly